# app/api/build.go
@@ -56,7 +56,7 @@ func (*buildApi) Index(r *ghttp.Request) {
 // @summary 打包列表
 // @tags   	打包模块
 // @produce json
-// @param   project_id query string ""
+// @param   project_id query string false "工程ID"
 // @router  /api/build/list [GET]
 // @success 200 {object} response.JsonResponse "执行结果"
 func (*buildApi) List(r *ghttp.Request) {
@@ -72,10 +72,9 @@ func (*buildApi) List(r *ghttp.Request) {
 // @summary 读取打包详情
 // @tags   	打包模块
 // @produce json
-// @param   project_id query string ""
+// @param   project_id query string true "工程id"
 // @router  /api/build/info [GET]
 func (*buildApi) Info(r *ghttp.Request) {
-	// project_id := r.Request.URL.Query().Get("project_id")
 	ws, err := r.WebSocket()
 	if err != nil {
 		glog.Error(err)
@@ -89,8 +88,6 @@ func (*buildApi) Info(r *ghttp.Request) {
 			return
 		}
 		project_id := string(msg)
-		fmt.Print(project_id)
-		fmt.Print(msg)
 		t, _ := tail.TailFile("./logs/build/"+project_id+".log", tail.Config{Follow: true})
 		for line := range t.Lines {
 			if err = ws.WriteMessage(msgType, []byte(line.Text)); err != nil {
